# scenery

./: .gitignore  .gitmodules  Gruntfile.js  LICENSE  LICENSE.md  Makefile  README.md  build.bat  changelog.md  eslint.config.mjs  implementation-notes.md  index.html  layertodo.txt  package-lock.json  package.json  require-todo.txt  scenery-tests.html  test.html  todo.txt  tsconfig-module.json  tsconfig.json  working-snapshot.json
.github/: pull_request_template.md
accessibility/: DOMPrototype.html  README.md  accessibility-documentation.html  accessibility-script.js  forces-and-motion-basics-accessibility-aria-activedescendant.html  forces-and-motion-basics-accessibility.html  scenery.js
assets/: Stitching.ai  ellipse-offset-curve.nb  scenery.css  stitch.ai
doc/: a-tour-of-scenery.html  accessibility-implementation.html  accessibility.html  doc.css  doc.js  extractFunctionJS.js  implementation-notes.html  index.html  layout-implementation-notes.md  layout.html  scenery-sandbox.css  scenery-sandbox.js  user-input.html
examples/: accessibility-animation.html  accessibility-button.html  accessibility-listeners.html  accessibility-shapes.html  accessibility-slider.html  accessibility-updating-pdom.html  creator-pattern.html  cursors.html  devious-drag.html  hello-world.html  index.html  input-multiple-displays.html  input.html  mouse-wheel.html  multi-touch.html  nodes.html  shapes.html  sprites.html  webglnode.html
js/display/guillotiere/: AtlasAllocator.ts  Cargo.toml  generate.js  guillotiere.js  guillotiere_wasm.js
js/display/guillotiere/src/: lib.rs
(+1340 files in other folders)
