[package]
name = "guillotiere-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
guillotiere = { version = "0.6.2", features = [] }
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3.63", features = ['console'] }
js-sys = "0.3.64"
console_error_panic_hook = { version = "0.1.6", optional = true }

[profile.release]
lto = true
opt-level = "z"
